Added prefabs for ground sprites and trees.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{D96D3858-C945-B477-098B-F199102EEA7E}</ProjectGuid>
+    <ProjectGuid>{CC318B16-7C95-706E-BD9F-5120851AAA98}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -45,8 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Enemy_Movement.cs" />
-     <Compile Include="Assets\Person_Movement.cs" />
+     <Compile Include="Assets\Scripts\Enemy_Movement.cs" />
+     <Compile Include="Assets\Scripts\Person_Movement.cs" />
+     <Compile Include="Assets\Scripts\Terrain_MeshRendererController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
